--- a/index.html
+++ b/index.html
@@ -14,20 +14,23 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <div class="jumbotron jumbotron-fluid">
-            <div class="container-fluid">
-                <!--<h1 class="display-4 text-center">Space Jam Trivia</h1>-->
-                
-            </div>
-    </div>
+
 
 
 </head>
 
 <body>
 
-    
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container-fluid">
+            <!--<h1 class="display-4 text-center">Space Jam Trivia</h1>-->
+
+        </div>
+    </div>
+
+
     <div class="container-fluid body">
+
         <div class="container">
             <div clas="row">
                 <div class="gameArea col-sm-12 text-center">
@@ -40,7 +43,7 @@
                     <div id="noTime"></div>
                     <div class="playArea">
 
-                        <h3>Have Fun!</h3>
+                        <h3>Space Jam Trivia!</h3>
                         <p>Time:
                             <span class="clock"></span> seconds
                         </p>
@@ -63,10 +66,10 @@
 
 
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
 
-        <script src="./assets/javascript/app.js"></script>
+    <script src="./assets/javascript/app.js"></script>
 </body>
 
 </html>
